--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -2,11 +2,12 @@ FROM python:3.10
 LABEL maintainer="petronio.candido@gmail.com"
 RUN apt-get update
 
+RUN apt-get install -y git vim jupyter
+
 ADD requirements.txt .
 
 RUN pip install -r requirements.txt
 RUN pip install -q flwr[simulation]
-RUN apt-get install git vim jupyterlab
 
 WORKDIR /home/mnist-experiment
 
