--- a/job/4-minist-test.yaml
+++ b/job/4-minist-test.yaml
@@ -23,4 +23,4 @@ spec:
       volumes:
       - name: my-pvc-nfs
         persistentVolumeClaim:
-          claimName: nfs
+          claimName: experiment-pvc
